[tool.poetry]
name = "proxy-cycling-webdriver"
version = "1.0.1"
description = "Selenium webdriver that will dynamically cycle given proxies when making requests"
authors = ["Daryl Stronge <darylkstronge@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "proxy_cycling_webdriver"}]

[tool.poetry.dependencies]
python = "^3.8"
selenium-wire = "^5.1.0"
blinker = "=1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
